data/derived/comb/progs/unify/prog2196.ml.out
Characters 250-253:
  | Times (ex1,ex2) -> ex1^"*"^ex2
                       ^^^
Error: This expression has type expr but an expression was expected of type
         string
